# mail-triage

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.ja.md  README.md  pyproject.toml
deploy/: Dockerfile  cloudrunjob.yaml  deploy.env.template  deploy.sh
docs/: architecture.md  setup.ja.md  setup.md
src/mail_triage/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/mail_triage/gcs/: __init__.py  client.py
src/mail_triage/llm/: __init__.py  analyzer.py  prompt.py
src/mail_triage/parser/: __init__.py  eml.py  msg.py  parse.py
src/mail_triage/slack/: __init__.py  notifier.py
tests/: test_config.py  test_gcs_client.py  test_llm_analyzer.py  test_llm_prompt.py  test_models.py  test_parser_dispatch.py  test_parser_eml.py  test_pipeline.py  test_slack_notifier.py
